header z-index fixed

--- a/src/app/main/components/infrastructure/header/header.component.scss
+++ b/src/app/main/components/infrastructure/header/header.component.scss
@@ -8,7 +8,7 @@
     background-color: $primary-color;
     display: block;
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.75);    
-    z-index: 10;
+    z-index: 999;
     max-height: 100vh;
     overflow-y: auto;
 }
